tests/security/taintedCurlInit/output.txt
ERROR: TaintedData - input.hack:1:17 - Data from a URL query string found its way to a curl url